@@ -1,3 +1,8 @@
+trunk
+=====
+
+* new arguments to mxRun() for checkpointing and socket communication (don't work yet)
+
 Release 0.3.0-1217 (Apr 20, 2010)
 =================================
 
